--- a/Task1/readme
+++ b/Task1/readme
@@ -1,1 +1,19 @@
-aa
+# IRIS FLOWER CLASSIFICATION
+
+## Overview
+This project aims to classify Iris flowers into different species (setosa, versicolor, and virginica) based on their sepal and petal measurements. The Iris dataset is widely used for introductory classification tasks in machine learning.
+
+## Dataset
+The Iris dataset (IRIS.csv) contains the following columns:
+- sepal_length: Sepal length in centimeters
+- sepal_width: Sepal width in centimeters
+- petal_length: Petal length in centimeters
+- petal_width: Petal width in centimeters
+- species: Species of the Iris flower (setosa, versicolor, or virginica)
+
+## Model
+The classification model used in this project is a Support Vector Machine (SVM) with a radial basis function (RBF) kernel.
+
+## How to Run
+1. Clone the repository:
+2. Install dependencies: pip install -r requirements.txt
